[package]
name = "retrochoir"
version = "0.0.1"
authors = ["Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>"]
edition = "2018"

exclude = [
  ".cargo-huskey/*",
  ".tool/*",
  "Makefile",
  ".env",
  ".clippy.toml",
  ".rustfmt.toml",
]

[badges]
gitlab = { repository = "grauwoelfchen/retrochoir", branch = "trunk" }

[dependencies]
leptess = "0.11"
kamadak-exif = "0.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
